--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "node-fetch": "^3.3.2",
-    "openai": "^5.12.2"
+    "openai": "^5.12.2",
+    "serpapi": "^2.2.1"
   }
 }
